--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,5 +1,8 @@
+html, body {
+  background-color: var(--color-cuaternario);
+}
+
 .inicio {
-  background-color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -7,18 +10,15 @@
 }
 
 .inicio .div {
-  background-color: #ffffff;
-  width: 1440px;
-  height: 972px;
+  width: 100vw;
+  height: 100vh;
   position: relative;
 }
 
 .inicio .overlap {
   position: absolute;
-  width: 1363px;
-  height: 757px;
-  top: 133px;
-  left: 38px;
+  width: 100%;
+  top: 90px;
   background-color: var(--color-cuaternario);
 }
 
@@ -142,7 +142,7 @@
 
 .inicio .overlap-3 {
   position: absolute;
-  width: 1440px;
+  width: 100%;
   height: 92px;
   top: -2px;
   left: 0;
@@ -186,7 +186,7 @@
 
 .inicio .rectangle {
   position: absolute;
-  width: 1440px;
+  width: 100%;
   height: 92px;
   top: 0;
   left: 0;
