--- a/css/juego_style.css
+++ b/css/juego_style.css
@@ -158,3 +158,16 @@ header img {
   font-size: 18px;
   z-index: 1000;
 }
+
+.mensaje-pausa {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  z-index: 1000; /* Asegura que el mensaje esté por encima de otros elementos */
+}
