--- a/css/juego_style.css
+++ b/css/juego_style.css
@@ -171,3 +171,24 @@ header img {
   text-align: center;
   z-index: 1000; /* Asegura que el mensaje esté por encima de otros elementos */
 }
+
+textarea {
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.button-focus-two {
+  background: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.button-focus-two:hover {
+  background: #0056b3;
+}
