--- a/css/juego_style.css
+++ b/css/juego_style.css
@@ -192,3 +192,16 @@ textarea {
 .button-focus-two:hover {
   background: #0056b3;
 }
+
+#popup-info {
+  display: none; /* Inicialmente oculto */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
