--- a/css/niveles_style.css
+++ b/css/niveles_style.css
@@ -1,186 +1,37 @@
-body, html {
+header {
+  background-color: var(--color-primario);
+}
+
+header img {
+  width: 180px;
+}
+
+.contenido-niveles {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 87.68px);
   background-color: var(--color-cuaternario);
 }
 
-.menu-niveles {
+.panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+}
+
+.niveles {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  width: 100%;
-}
-
-.menu-niveles .div {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.menu-niveles .overlap {
-  position: absolute;
-  width: 100%;
-  top: 90px;
-  background-color: var(--color-cuaternario);
-}
-
-.menu-niveles .overlap-group {
-  position: absolute;
-  width: 53px;
-  height: 53px;
-  top: 679px;
-  left: 1287px;
-  background-image: url(./img/image-8.png);
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-.menu-niveles .image {
-  width: 53px;
-  height: 53px;
-  top: 0;
-  left: 0;
-  position: absolute;
-  object-fit: cover;
-}
-
-.menu-niveles .text-wrapper {
-  position: absolute;
-  height: 47px;
-  top: 475px;
-  left: 141px;
-  font-family: var(--titulo-2-font-family);
-  font-weight: var(--titulo-2-font-weight);
-  color: #070707;
-  font-size: var(--titulo-2-font-size);
-  text-align: center;
-  letter-spacing: var(--titulo-2-letter-spacing);
-  line-height: var(--titulo-2-line-height);
-  font-style: var(--titulo-2-font-style);
-}
-
-.menu-niveles .text-wrapper-2 {
-  position: absolute;
-  height: 47px;
-  top: 475px;
-  left: 573px;
-  font-family: var(--titulo-2-font-family);
-  font-weight: var(--titulo-2-font-weight);
-  color: #070707;
-  font-size: var(--titulo-2-font-size);
-  text-align: center;
-  letter-spacing: var(--titulo-2-letter-spacing);
-  line-height: var(--titulo-2-line-height);
-  font-style: var(--titulo-2-font-style);
-}
-
-.menu-niveles .text-wrapper-3 {
-  position: absolute;
-  height: 47px;
-  top: 475px;
-  left: 1006px;
-  font-family: var(--titulo-2-font-family);
-  font-weight: var(--titulo-2-font-weight);
-  color: #070707;
-  font-size: var(--titulo-2-font-size);
-  text-align: center;
-  letter-spacing: var(--titulo-2-letter-spacing);
-  line-height: var(--titulo-2-line-height);
-  font-style: var(--titulo-2-font-style);
-}
-
-.menu-niveles .group-2 {
-  position: absolute;
-  width: 237px;
-  height: 235px;
-  top: 212px;
-  left: 560px;
-  background-color: var(--color-primario);
-  border-radius: 12px;
-}
-
-.menu-niveles .group-3 {
-  position: absolute;
-  width: 237px;
-  height: 235px;
-  top: 212px;
-  left: 974px;
-  background-color: var(--color-primario);
-  border-radius: 12px;
-}
-
-.menu-niveles .group {
-  position: absolute;
-  width: 237px;
-  height: 235px;
-  top: 212px;
-  left: 152px;
-  background-color: var(--color-primario);
-  border-radius: 12px;
-}
-
-.menu-niveles .rectangle {
-  position: absolute;
-  width: 237px;
-  height: 235px;
-  top: 0;
-  left: 3px;
-  background-color: var(--color-primario);
-  border-radius: 12px;
-}
-
-.menu-niveles .frame {
-  display: inline-flex;
-  flex-direction: column;
-  height: 235px;
   align-items: center;
-  justify-content: space-around;
-  gap: 10px;
-  position: absolute;
-  top: 0;
-  left: 3px;
+  justify-content: center;
+  gap: 200px;
 }
 
-.menu-niveles .rectangle-2 {
-  position: relative;
-  width: 237px;
-  height: 235px;
-  background-color: #ffffff70;
-  border-radius: 12px;
-}
-
-.menu-niveles .img {
-  width: 180px;
-  height: 171px;
-  top: 32px;
-  left: 29px;
-  position: absolute;
-  object-fit: cover;
-}
-
-.menu-niveles .frame-2 {
-  position: absolute;
-  width: 63px;
-  height: 63px;
-  top: 0;
-  left: 0;
-}
-
-
-
-.menu-niveles .image-2 {
-  width: 180px;
-  height: 180px;
-  top: 27px;
-  left: 29px;
-  position: absolute;
-  object-fit: cover;
-}
-
-.menu-niveles .p {
-  position: absolute;
+.contenido-niveles-texto {
   width: 693px;
-  height: 85px;
-  top: 20px;
-  left: 27px;
   font-family: var(--titulo-1-font-family);
   font-weight: var(--titulo-1-font-weight);
   color: #000000;
@@ -191,12 +42,40 @@ body, html {
   font-style: var(--titulo-1-font-style);
 }
 
-.menu-niveles .text-wrapper-4 {
-  position: absolute;
+.boton-nivel {
+  width: 237px;
+  height: 235px;
+  background-color: var(--color-primario);
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+
+.image-nivel {
+  width: 180px;
+  height: 180px;
+  top: 27px;
+  left: 29px;
+  object-fit: cover;
+}
+
+.text-wrapper {
+  height: 47px;
+  font-family: var(--normal-font-family);
+  font-weight: var(--normal-font-weight);
+  color: #070707;
+  font-size: var(--normal-font-size);
+  text-align: center;
+  letter-spacing: var(--titulo-2-letter-spacing);
+  line-height: var(--titulo-2-line-height);
+  font-style: var(--titulo-2-font-style);
+}
+
+.text-wrapper-2 {
   width: 1095px;
-  height: 85px;
-  top: 582px;
-  left: 134px;
   font-family: var(--normal-font-family);
   font-weight: var(--normal-font-weight);
   color: #000000;
@@ -206,104 +85,3 @@ body, html {
   line-height: var(--normal-line-height);
   font-style: var(--normal-font-style);
 }
-
-
-
-.menu-niveles .image-3 {
-  width: 46px;
-  height: 46px;
-  top: 683px;
-  left: 49px;
-  position: absolute;
-  object-fit: cover;
-}
-
-.menu-niveles .sound {
-  position: absolute;
-  width: 43px;
-  height: 44px;
-  top: 44px;
-  left: 1292px;
-  background-image: url(./img/token-sound-2.png);
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-.menu-niveles .overlap-4 {
-  position: absolute;
-  width: 100%;
-  height: 92px;
-  top: -2px;
-  left: 0;
-  background-color: #959393;
-}
-
-.menu-niveles .component {
-  position: absolute;
-  width: 115px;
-  height: 57px;
-  top: 18px;
-  left: 23px;
-  background-color: #d9d9d9;
-}
-
-.menu-niveles .overlap-group-2 {
-  position: relative;
-  width: 116px;
-  height: 58px;
-  top: -1px;
-  left: -1px;
-}
-
-.menu-niveles .line {
-  left: 1px;
-  position: absolute;
-  width: 116px;
-  height: 58px;
-  top: 0;
-  object-fit: cover;
-}
-
-.menu-niveles .line-2 {
-  left: 0;
-  position: absolute;
-  width: 116px;
-  height: 58px;
-  top: 0;
-  object-fit: cover;
-}
-
-.menu-niveles .rectangle-3 {
-  position: absolute;
-  width: 100%;
-  height: 92px;
-  top: 0;
-  left: 0;
-  background-color: var(--color-primario);
-}
-
-.menu-niveles .screenshot {
-  position: absolute;
-  width: 174px;
-  height: 82px;
-  top: 6px;
-  left: 0;
-  object-fit: cover;
-}
-
-.menu-niveles .text-wrapper-5 {
-  position: absolute;
-  height: 42px;
-  top: 904px;
-  left: 38px;
-  font-family: var(--normal-font-family);
-  font-weight: var(--normal-font-weight);
-  color: #070707;
-  font-size: var(--normal-font-size);
-  text-align: center;
-  letter-spacing: var(--normal-letter-spacing);
-  line-height: var(--normal-line-height);
-  font-style: var(--normal-font-style);
-}
-
-
