style: css improvement

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primario: rgba(29, 36, 64, 1);
+  --color-primario: #1d2440;
   --color-secundario: rgba(155, 8, 0, 1);
   --color-terciario: rgba(212, 58, 0, 1);
   --color-cuaternario: rgba(246, 154, 11, 1);
