--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -1,9 +1,9 @@
 :root {
   --color-primario: #1d2440;
   --color-secundario: rgba(155, 8, 0, 1);
-  --color-terciario: rgba(212, 58, 0, 1);
+  --color-terciario: #FF8154;
   --color-cuaternario: rgba(246, 154, 11, 1);
-  --color-quintenario: rgba(253, 191, 92, 1);
+  --color-quintenario: #1d2440;
   --gris: rgba(219, 219, 219, 1);
   --negro: rgba(26, 23, 26, 1);
   --verde: rgb(157, 215, 148, 1);
